// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Paper Prescription Scan Page (Story 24.3) > RTL snapshot tests > matches snapshot in LTR mode 1`] = `
<div>
  <div
    dir="ltr"
  >
    <div
      class="space-y-6"
    >
      <div
        class="flex items-center justify-between"
      >
        <h2
          class="text-xl font-bold text-neutral-900"
        >
          Scan Paper Prescription
        </h2>
      </div>
      <div
        aria-live="polite"
        class="rounded-lg border border-red-300 bg-red-50 px-4 py-3"
        role="alert"
      >
        <div
          class="flex items-center gap-2"
        >
          <span
            class="text-red-600 font-semibold text-sm"
          >
            Manual Verification Required
          </span>
        </div>
        <p
          class="text-red-700 text-xs mt-1"
        >
          Paper prescriptions cannot be digitally verified. The pharmacist takes full responsibility for verifying authenticity.
        </p>
      </div>
      <div
        class="rounded-lg border border-blue-200 bg-blue-50 px-4 py-2"
        role="status"
      >
        <p
          class="text-xs text-blue-800 font-medium"
        >
          No drug interaction check performed — external prescriber
        </p>
      </div>
      <div
        class="space-y-4"
      >
        <div
          class="space-y-3"
        >
          <button
            class="w-full rounded-lg border-2 border-dashed border-neutral-300 px-4 py-8 text-center hover:border-primary-400 hover:bg-primary-50"
          >
            <span
              class="block text-lg font-medium text-neutral-700"
            >
              Open Camera
            </span>
            <span
              class="text-sm text-neutral-500"
            >
              Use webcam to capture prescription
            </span>
          </button>
          <div
            class="relative flex items-center gap-3"
          >
            <div
              class="flex-1 border-t border-neutral-200"
            />
            <span
              class="text-xs text-neutral-400"
            >
              or
            </span>
            <div
              class="flex-1 border-t border-neutral-200"
            />
          </div>
          <button
            class="w-full rounded-lg border-2 border-dashed border-neutral-300 px-4 py-8 text-center hover:border-primary-400 hover:bg-primary-50"
          >
            <span
              class="block text-lg font-medium text-neutral-700"
            >
              Upload File
            </span>
            <span
              class="text-sm text-neutral-500"
            >
              Select an image file (JPEG, PNG)
            </span>
          </button>
          <input
            accept="image/jpeg,image/png"
            class="hidden"
            type="file"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Paper Prescription Scan Page (Story 24.3) > RTL snapshot tests > matches snapshot in RTL mode 1`] = `
<div>
  <div
    dir="rtl"
  >
    <div
      class="space-y-6"
    >
      <div
        class="flex items-center justify-between"
      >
        <h2
          class="text-xl font-bold text-neutral-900"
        >
          Scan Paper Prescription
        </h2>
      </div>
      <div
        aria-live="polite"
        class="rounded-lg border border-red-300 bg-red-50 px-4 py-3"
        role="alert"
      >
        <div
          class="flex items-center gap-2"
        >
          <span
            class="text-red-600 font-semibold text-sm"
          >
            Manual Verification Required
          </span>
        </div>
        <p
          class="text-red-700 text-xs mt-1"
        >
          Paper prescriptions cannot be digitally verified. The pharmacist takes full responsibility for verifying authenticity.
        </p>
      </div>
      <div
        class="rounded-lg border border-blue-200 bg-blue-50 px-4 py-2"
        role="status"
      >
        <p
          class="text-xs text-blue-800 font-medium"
        >
          No drug interaction check performed — external prescriber
        </p>
      </div>
      <div
        class="space-y-4"
      >
        <div
          class="space-y-3"
        >
          <button
            class="w-full rounded-lg border-2 border-dashed border-neutral-300 px-4 py-8 text-center hover:border-primary-400 hover:bg-primary-50"
          >
            <span
              class="block text-lg font-medium text-neutral-700"
            >
              Open Camera
            </span>
            <span
              class="text-sm text-neutral-500"
            >
              Use webcam to capture prescription
            </span>
          </button>
          <div
            class="relative flex items-center gap-3"
          >
            <div
              class="flex-1 border-t border-neutral-200"
            />
            <span
              class="text-xs text-neutral-400"
            >
              or
            </span>
            <div
              class="flex-1 border-t border-neutral-200"
            />
          </div>
          <button
            class="w-full rounded-lg border-2 border-dashed border-neutral-300 px-4 py-8 text-center hover:border-primary-400 hover:bg-primary-50"
          >
            <span
              class="block text-lg font-medium text-neutral-700"
            >
              Upload File
            </span>
            <span
              class="text-sm text-neutral-500"
            >
              Select an image file (JPEG, PNG)
            </span>
          </button>
          <input
            accept="image/jpeg,image/png"
            class="hidden"
            type="file"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
